--- a/via_django/via/templates/via/via/via.html
+++ b/via_django/via/templates/via/via/via.html
@@ -46,7 +46,7 @@ textarea { border:1px solid #cccccc; margin:0.6rem 0; padding:0.2rem 0.4rem; }
 /* Middle panel: containing #image_panel, #leftsidebar */
 .middle_panel { display:table; table-layout:fixed; width:100%; z-index:1; padding:0;}
 #leftsidebar { display:none; z-index:10; vertical-align:top;}
-#display_area { display:table-cell; width:100%; z-index:1; margin:0; padding-left:1em; vertical-align:top; overflow:auto; }
+#display_area { display:table-cell; width:100%; z-index:1; margin:0; padding-left:1em; vertical-align:top; overflow:auto; position: relative; }
 /* layers of canvas */
 #image_panel        { position:relative; outline:none; }
 #image_panel img    { visibility:hidden; opacity:0; position:absolute; top:0px; left:0px; width:100%; height:100%; outline:none; }
@@ -1009,6 +1009,7 @@ POSSIBILITY OF SUCH DAMAGE.
 "use strict";
 var PROJECT_PK       = '{{ project.id }}';
 var PROJECT_NAME     = '{{ project.name }}';
+var USER_NAME        = '{{ user.get_username }}';
 var VIA_VERSION      = '2.0.10';
 var VIA_NAME         = 'VGG Image Annotator';
 var VIA_SHORT_NAME   = 'VIA';
@@ -1284,6 +1285,7 @@ function file_metadata(filename, size) {
 function file_region() {
   this.shape_attributes  = {}; // region shape attributes
   this.region_attributes = {}; // region attributes
+  this.user_edited = USER_NAME;
 }
 
 //
